--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,34 @@
+<!--These are the things available on every page.-->
+
+
 <!DOCTYPE html>
 <html>
 <head>
   <title>
-    <%= yield(:title) %>
+    <%= full_title(yield(:title)) %>
   </title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all',
+                                            'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <%= link_to("sample app", "#", {id: "logo"}) %>
+        <nav>
 
-<%= yield %>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Home", "#" %></li>
+            <li><%= link_to "Help", "#" %></li>
+            <li><%= link_to "Log In", "#" %></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="container">
+        <%= yield %>
+    </div>
 
 </body>
 </html>
