--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,15 @@
 <% provide(:title, "Home") %>
 
+<div class="center jumbotron">
 
-<h1>StaticPages#home</h1>
-Also, fuck your couch.
+  <h1>Welcome! to rwitter</h1>
+
+  <h2>
+    This is the homepage
+  </h2>
+
+  <%= link_to("Sign up nao!", "#", {class: "btn btn-lg btn-primary"}) %>
+
+</div>
+
+<%= link_to(image_tag("lol.png", alt: "imgur" ), 'https://kevmo.github.io') %>
