--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, "Home") %>
 
+
+
 <div class="center jumbotron">
 
   <h1>Welcome! to rwitter</h1>
@@ -8,7 +10,7 @@
     This is the homepage
   </h2>
 
-  <%= link_to("Sign up nao!", "#", {class: "btn btn-lg btn-primary"}) %>
+  <%= link_to("Sign up nao!", "/signup", {class: "btn btn-lg btn-primary"}) %>
 
 </div>
 
